syntax = "proto3";

package com.premium.grpcclient;

message Payment {
  string id = 1;
  string booking = 2;
  double amount = 3;
  string paymentDate = 4;
  string status = 5;
}

message ValidatePaymentRequest {
  Payment payment = 1;
}

message ValidatePaymentResponse {
  Payment payment = 1;
}

service PaymentValidator {
  rpc validatePayment (ValidatePaymentRequest) returns (ValidatePaymentResponse);
}
